# admin-polygon-simplify

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  abstract_way_simplifier.cpp  abstract_way_simplifier.hpp  admin_polygon_simplify.cpp  admin_rel_handlers.cpp  admin_rel_handlers.hpp  admin_shp_handler.cpp  admin_shp_handler.hpp  boundary_filter_collector.cpp  boundary_filter_collector.hpp  boundary_relation_collector.cpp  boundary_relation_collector.hpp  boundary_segment.cpp  boundary_segment.hpp  distance_sphere_plain.cpp  distance_sphere_plain.hpp  intermediate_simplifier.cpp  intermediate_simplifier.hpp  no_simplify_segment.hpp  osm_admin_level_rels2ways.cpp  osm_admin_level_relways_export.cpp  osm_adminfilter.cpp  vector3d.cpp  vector3d.hpp  way_admin_level_index.cpp  way_admin_level_index.hpp  way_simplify_handler.cpp  way_simplify_handler.hpp  way_simplify_handler2.cpp  way_simplify_handler2.hpp
test/: CMakeLists.txt
test/include/: util.hpp
test/t/: test_distance_sphere.cpp  test_douglas_peucker_closed.cpp  test_douglas_peucker_nonclosed.cpp  test_intersection.cpp
